# CmakeTest

./: CMakeLists.txt  CMakeLists_backup1.txt  main.cpp
classtest/: CMakeLists.txt  classtest.cpp  classtest.h
dep/: CMakeLists.txt
dep/hellodog/: CMakeLists.txt  hellodog.c
dep/helloperson/: CMakeLists.txt  helloperson.c  helloperson.h
hello/: CMakeLists.txt  hello.c
install/inc/: hello.h  hellodog.h
install/src/: hello.c  main.c
script/: build.sh
